# Spiropyran

./: .gitattributes  .gitignore  CLAUDE-old.md  CLAUDE.md  LAYOUT.txt  README.md  insilico-screening.md  molecules.cdxml  project.md  pyproject.toml  stage_notes.md
.claude/: settings.json
.claude/agents/: code-reviewer.md  literature-checker.md  output-parser.md  spec-checker.md  test-runner.md
.claude/commands/: add-stage.md  check-spec.md  implement.md  plan.md  run-tests.md  session-summary.md
spiropyran_dr/: __main__.py  cli.py  config_utils.py  io_utils.py  pbs_utils.py  pipeline.py
spiropyran_dr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spiropyran_dr/config/: default.yaml  smarts.yaml
spiropyran_dr/stages/: __init__.py  aggregate.py  base.py  crest_stage.py  dft_sp_stage.py  mm.py  prep.py  xtb_stage.py
tests/: conftest.py  test_aggregate.py  test_cli.py  test_config_utils.py  test_crest_stage.py  test_dft_sp_stage.py  test_io_utils.py  test_mm.py  test_pbs_utils.py  test_pipeline.py  test_prep.py  test_xtb_stage.py
tests/fixtures/crest/anti/: crest.energies
tests/fixtures/crest/anti_min/: crest_conformers.xyz
tests/fixtures/crest/syn/: crest.energies  crest_conformers.xyz
tests/fixtures/molecules/benzylSP/: manifest.json
tests/fixtures/molecules/benzylSP/crest/anti_mecp/: crest_conformers.xyz
tests/fixtures/molecules/benzylSP/crest/syn_mecp/: crest_conformers.xyz
tests/fixtures/molecules/dimethylSP/crest/anti_mecp/: wbo  (+11 more)
tests/fixtures/xtb_constr/anti/: xtb.out  xtbopt.xyz
tests/fixtures/xtb_constr/syn/: xtbopt.xyz
(+47 files in other folders)
